# fault-management-system

./: CMakeLists.txt  Dockerfile  Dockerfile.test  README.md  build.sh  run.sh  sonar-project.properties
include/: EmulatedInterface.hpp  FaultManager.hpp  FaultTable.hpp  FaultTableEntry.hpp  FixedQueue.hpp  Status.hpp  Uid.hpp
src/: EmulatedInterface.cpp  FaultManager.cpp  FaultTable.cpp  FaultTableEntry.cpp  main.cpp
test/: CMakeLists.txt  FaultTableEntryTest.cpp  FaultTableTest.cpp  UidTest.cpp
uml/: fms_class.puml  fms_sequence.puml
